templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      name: web
      targetPort: 6379
    - port: 9121
      name: metrics
      targetPort: 9121
  clusterIP: None
